Fixed nav on mobile

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -129,7 +129,7 @@ section {
 		align-items: center;
 		padding-right: 24px;
 		padding-left: 84px;
-		position: relative;
+		position: absolute;
 		left: -600px;
 		margin: 0;
 		z-index: 90;
@@ -137,7 +137,8 @@ section {
 			background-color: rgba(255, 255, 255, 0.97);
 			flex-direction: column;
 			width: 100%;
-			padding: 0 1.6rem;
+			padding-left: 0;
+			padding-right: 0;
 			left: 0;
 			top: -1025px;
 			height: 100vh;
@@ -146,7 +147,7 @@ section {
 		}
 	}
 	li {
-		margin-right: 20px;
+		margin-right: 35px;
 	}
 	a {
 		color: $lightBlack;
@@ -748,6 +749,14 @@ section {
 		border: 1px solid white;
 		-webkit-appearance: none;
 		-moz-appearance: none;
+
+
+
+
+
+
+
+
 		margin-bottom: 6px;
 		font-size: 16px;
 		padding: 2px 4px;
